<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 style="@style/DialogContent.Table"
 >

   <TableRow style="@style/DialogView">
      <EditText
       android:id="@+id/editTextTitle"
       android:layout_column="0"
       android:hint="@string/input_hint_title"
       android:importantForAutofill="no"
       style="@style/DialogInput.EditText"
       />
      <EditText
       android:id="@+id/editTextContent"
       android:layout_column="1"
       android:hint="@string/input_hint_content"
       android:importantForAutofill="no"
       style="@style/DialogInput.EditText"
       />
   </TableRow>

   <TableRow style="@style/DialogView">
      <TextView
       android:text="@string/input_description_visibility"
       android:layout_column="0"
       style="@style/DialogText.Description"
       />
      <TextView
       android:text="@string/input_description_priority"
       android:layout_column="1"
       style="@style/DialogText.Description"
       />
   </TableRow>

   <TableRow style="@style/DialogView">
      <Spinner
       android:id="@+id/spinnerVisibility"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_column="0"
       />
      <Spinner
       android:id="@+id/spinnerPriority"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_column="1"
       />
   </TableRow>

   <TableRow style="@style/DialogView">
      <CheckBox
       android:id="@+id/checkBoxPersistentPin"
       android:text="@string/input_description_makepinpersistent"
       android:layout_marginTop="16dp"
       android:layout_span="2"
       style="@style/DialogText.CheckBox"
       />
   </TableRow>

   <TableRow style="@style/DialogView">
      <CheckBox
       android:id="@+id/checkBoxShowActions"
       android:text="@string/input_description_shownotificationactions"
       android:layout_marginTop="4dp"
       android:layout_span="2"
       style="@style/DialogText.CheckBox"
       />
   </TableRow>

</TableLayout>