<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">MicroPinner</string>

   <string name="title_new_pin">New Pin</string>
   <string name="title_edit_pin">Edit Pin</string>

   <string name="txtTitleAndContent">Title\nand text content</string>
   <string name="spinPriority">Priority</string>
   <string name="chkShowActions">Show notification actions</string>
   <string name="btnMoreSettings">More Settings</string>
   <string name="ibtnItemMoveUp">Move Up</string>
   <string name="ibtnItemMoveDown">Move Down</string>
   <string name="lblItemOrder">Priority: %s</string>

   <string name="action_pin">Pin</string>
   <string name="action_cancel">Cancel</string>
   <string name="action_delete">Delete</string>
   <string name="action_delete_pins">Delete Pins…</string>
   <string name="action_order_pins">Arrange Pins…</string>
   <string name="action_save_to_clipboard">Save to clipboard</string>

   <string name="message_empty_list">Create your first pin by clicking \'New Pin\'</string>
   <string name="message_clipped_pin">Pin has been copied to clipboard.</string>
   <string name="message_empty_title">The title has to contain text.</string>
   <string name="message_too_many">MicroPinner can only show 20 pins (5 per Priority)</string>
   <string name="message_require_permission">MicroPinner requires your permission</string>

   <string name="visibility_public">public</string>
   <string name="visibility_private">private</string>
   <string name="visibility_secret">secret</string>

   <string name="priority_min">min</string>
   <string name="priority_low">low</string>
   <string name="priority_high">high</string>
   <string name="priority_default">default</string>

</resources>
