<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 style="@style/DialogFooter"
 tools:showIn="@layout/dialog_main"
 >
   <Button
    android:id="@+id/buttonCancel"
    android:text="@string/dialog_action_cancel"
    style="@style/DialogButtons"
    />
   <Button
    android:id="@+id/buttonPin"
    android:text="@string/dialog_action_pin"
    style="@style/DialogButtons"
    />
</LinearLayout>